# pratt

./: .gitignore  .merlin  .nvimrc  Algorithm.dot  Init.ml  Makefile  README.md  _oasis  _tags  expression.ml  fold.ml  foundation.ml  lexer.mll  lexicon.mll  location.ml  main.byte  main.ml  myocamlbuild.ml  opal.ml  parser.ml  pratt.ml  pratt.opam  precedence.ml  setup.data  setup.ml  syntax.ml  tests.ml  token.ml
_build/: _digests  _log  foundation.ml  foundation.ml.depends  lexicon.ml  lexicon.ml.depends  lexicon.mll  main.byte  main.ml  main.ml.depends  ocamlc.where  parser.ml  parser.ml.depends  pratt.ml  pratt.ml.depends  syntax.ml  syntax.ml.depends
docs/: core-syntax.md  dev-log.md  newline.md
examples/: .merlin  Javascript.ml  Javascript_lexer.ml  Lexer.ml  jbuild
src/: .merlin  Abstract.ml  Abstract.mli  META  Parser.ml  Parser.mli  Pratt.ml  Pratt.mli  Pratt.mli_  Stream.ml  encoder.ml  env.ml  evaluator.ml  fold.ml  fold.mlpack  fold_encoder.ml  fold_env.ml  fold_eval.ml  fold_evaluator.ml  fold_grammar.ml  fold_lang.ml  fold_lexer.ml  fold_main.ml  fold_parser.ml  fold_syntax.ml  foundation.ml  grammar.ml  jbuild  lang.ml  lexer.ml  main.ml  minimal.ml  parser.ml  playground.ml  pratt.ml  pratt.mldylib  pratt.mllib  pratt_encoder.ml  pratt_env.ml  pratt_foundation.ml  (+7 more)
tests/: .merlin  Lispy_lexer.ml  Local.ml  Nanotest.ml  Test_lispy.ml  Test_parser.ml  Test_pratt_calc.ml  data.fold  jbuild  macros.fold  meta_attr.fold  primitives.fold  test.ml  test_fold.ml  test_fold_eval.ml  test_parser.ml  test_utils.ml
tmp/: Makefile  demo.ml  lexicon.mll  (+10 more)
(+3 files in other folders)
