opam-version: "1.2"
version:      "0.2.0"
maintainer:   "Rizo Isrof <rizo@odis.io>"
authors:      "Rizo Isrof <rizo@odis.io>"
license:      "ISC"
homepage:     "https://github.com/rizo/pratt"
bug-reports:  "https://github.com/rizo/pratt/issues"
dev-repo:     "https://github.com/rizo/pratt.git"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name]

depends: [
  "pure"
  "fmt"
  "jbuilder" {build}
]
available: [ocaml-version >= "4.02.0"]
